# quantum-examples

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  genindex.html  index.html  numpart.html  objects.inv  pyproject.toml  search.html  searchindex.js
docs/source/: api.rst  conf.py  index.rst  modules.rst  numpart.rst  optimization_problems.rst
optimization_problems/: number_partition.py
src/optimization_problems/: number_partition.py
